fix grid alignt items

--- a/JSMasterBook/src/app/home/home.component.scss
+++ b/JSMasterBook/src/app/home/home.component.scss
@@ -8,16 +8,30 @@
         width: 100%;
         height: 100%;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         position: relative;
         background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(23,9,121,0.5480567226890756) 23%, rgba(19,130,147,0.7861519607843137) 76%, rgba(14,95,178,1) 100%, rgba(14,193,230,0.9934348739495799) 100%);
+        & h1{
+            border-width: 0 0 2px 0px;
+            border-style: solid;;
+            border-color: #999;
+            font-weight: bold;
+            padding: 10px;
+            color: #fff;
+        }
+        & h3{
+            font-weight: bold;
+            margin: 10px 10px 20px 10px;
+            color: #fff;
+        }
         & a{
             font-family: "Fira Sans", sans-serif;
             font-weight: bold;
             height: auto    ;
             width: auto;
-            font-size: 40px;
+            font-size: 20px;
             color: #1dcec1;
             text-decoration: none;
             padding: 15px;
